--- a/patron.html
+++ b/patron.html
@@ -100,7 +100,9 @@
     <p>Fuera más abierto, compartiera en público su perspicacia y opiniones.</p>
 
     <h2>Descripción:</h2>
-    <p>La capacidad de pensamiento crítico suele estar muy desarrollada en el Objetivo. Recalca la importancia de sacar conclusiones y basar las acciones en hechos. Busca la precisión y exactitud en todo lo que hace...</p>
+    <p>La capacidad de pensamiento crítico suele estar muy desarrollada en el Objetivo.  Recalca la importancia de sacar conclusiones y basar las acciones en hechos.  Busca la precisión y exactitud en todo lo que hace.  Sin embargo, para llevar a cabo con eficiencia su trabajo, el Objetivo suele combinar la información intuitiva con los datos que posee.  Cuando duda sobre el curso a tomar, evita hacer el ridículo preparándose meticulosamente.  Por ejemplo, el Objetivo perfeccionará una nueva habilidad en privado antes de usarla en alguna actividad de grupo.</p>
+    <p>El Objetivo prefiere trabajar con personas que , como él, prefieren mantener un ambiente laboral tranquilo.  Como puede mostrarse reticente en expresar sus sentimiento, hay quienes lo consideran tímido.  Se siente particularmente incómodo ante personas agresivas.  A pesar de esta apariencia templada, el Objetivo tiene un fuerte necesidad de controlar el ambiente.  Suele ejercer este control en forma indirecta solicitando el apego a reglas y normas.</p>
+    <p>El Objetivo se preocupa por llegar a respuestas “correctas” y le puede resultar difícil tomar decisiones en situaciones ambiguas.  Su tendencia a preocuparse le puede llevar a una “parálisis por análisis”.  Con demasiada frecuencia, cuando comete un error, titubea en reconocerlo y se empreña en buscar información que le permita apoyar su postura.</p>
 
     <div class="meta">
       <p><strong>Nota:</strong> En la versión final, este texto se ajustará dinámicamente según los resultados DISC almacenados en <code>localStorage</code>.</p>
