--- a/patron.html
+++ b/patron.html
@@ -14,36 +14,33 @@
       font-family: "Segoe UI", sans-serif;
       margin: 0;
       padding: 40px 20px;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(90deg, #a8e6cf 0%, #b8e6d3 25%, #c8e6d7 50%, #d4e8e0 75%, #e0eae9 100%);
       min-height: 100vh;
       color: #222;
       line-height: 1.6;
     }
     .container {
-      background: #fff;
+      background: rgba(255, 255, 255, 0.95);
       padding: 40px;
       border-radius: 20px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
       max-width: 800px;
       margin: auto;
+      backdrop-filter: blur(10px);
     }
     h1 {
       text-align: center;
-      color: #004aad;
+      color: #2c2c2c;
       font-size: 2.5em;
       margin-bottom: 30px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-      background: linear-gradient(135deg, #004aad, #0066ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
+      font-weight: 600;
     }
     h2 {
-      color: #004aad;
+      color: #5fa890;
       margin-top: 30px;
       margin-bottom: 10px;
       font-size: 1.4em;
-      border-left: 4px solid #ffd700;
+      border-left: 4px solid #7fb8a3;
       padding-left: 15px;
     }
     p {
@@ -55,20 +52,47 @@
       margin-bottom: 20px;
       font-style: italic;
       padding: 15px;
-      background: linear-gradient(135deg, #f0f7ff, #ffffff);
+      background: linear-gradient(135deg, #f0f9f5, #ffffff);
       border-radius: 10px;
-      border-left: 4px solid #ffd700;
+      border-left: 4px solid #7fb8a3;
     }
     code {
-      background: #f0f7ff;
+      background: #f0f9f5;
       padding: 2px 6px;
       border-radius: 4px;
-      color: #004aad;
+      color: #5fa890;
       font-family: 'Courier New', monospace;
     }
   </style>
 </head>
 <body>
+  <div class="logo-header" style="text-align: center; margin-bottom: 20px;">
+    <div style="display: inline-block; margin-bottom: 15px;">
+      <div style="width: 120px; height: 120px; margin: 0 auto;">
+        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" style="width: 100%; height: 100%;">
+          <path d="M 100,30 A 70,70 0 1,1 100,170" stroke="#2c2c2c" stroke-width="6" fill="none" stroke-linecap="round"/>
+          <g transform="translate(70,50)">
+            <polygon points="0,-4 1,-1 4,-1 1.5,1 2.5,4 0,2 -2.5,4 -1.5,1 -4,-1 -1,-1" fill="#2c2c2c"/>
+          </g>
+          <g transform="translate(130,150)">
+            <polygon points="0,-4 1,-1 4,-1 1.5,1 2.5,4 0,2 -2.5,4 -1.5,1 -4,-1 -1,-1" fill="#2c2c2c"/>
+          </g>
+          <circle cx="115" cy="45" r="2" fill="#2c2c2c"/>
+          <circle cx="85" cy="55" r="1.5" fill="#2c2c2c"/>
+          <circle cx="125" cy="75" r="1.5" fill="#2c2c2c"/>
+          <circle cx="75" cy="85" r="1.5" fill="#2c2c2c"/>
+          <circle cx="130" cy="110" r="1.5" fill="#2c2c2c"/>
+          <circle cx="70" cy="115" r="1.5" fill="#2c2c2c"/>
+          <circle cx="125" cy="145" r="1.5" fill="#2c2c2c"/>
+          <circle cx="75" cy="155" r="1.5" fill="#2c2c2c"/>
+          <text x="100" y="50" text-anchor="middle" font-family="Brush Script MT, Lucida Handwriting, cursive" font-size="18" font-weight="600" fill="#2c2c2c">Onboarding</text>
+          <text x="88" y="105" text-anchor="middle" font-family="Brush Script MT, Lucida Handwriting, cursive" font-size="48" font-weight="700" fill="#2c2c2c">O</text>
+          <text x="112" y="105" text-anchor="middle" font-family="Brush Script MT, Lucida Handwriting, cursive" font-size="48" font-weight="700" fill="#2c2c2c">B</text>
+          <text x="100" y="160" text-anchor="middle" font-family="Brush Script MT, Lucida Handwriting, cursive" font-size="10" fill="#2c2c2c">Global skills for job positioning</text>
+        </svg>
+      </div>
+    </div>
+  </div>
   <div class="container">
     <h1>Patrón del Objetivo</h1>
 
