Added description for every adjective and a tooltip to show them.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
 
   <div class="container">
-    <p class="subtitle">Select "Más" and "Menos" for each word in every group</p>
+    <p class="subtitle">Por cada pregunta de la 1 a la 28, escoja una frase que <b>más lo describa a usted</b> y una que <b>menos lo describa a usted</b>.</p>
     
     <!-- Score Counter Display -->
     <div id="scoreCounter" class="score-counter-container"></div>
@@ -78,7 +78,7 @@
     <form id="discForm"></form>
     <div class="button-container">
       <button type="button" id="randomizeBtn">✦ Randomize Answers</button>
-      <button type="button" id="submitBtn">Submit Test</button>
+      <button type="button" id="submitBtn">Enviar Respuestas</button>
     </div>
     <div id="results"></div>
   </div>
