--- a/patron.html
+++ b/patron.html
@@ -506,10 +506,42 @@
       gap: 12px;
     }
 
-    .job-offer-header h3 {
+    .job-offer-header-top {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      gap: 12px;
       margin-bottom: 4px;
+    }
+
+    .job-offer-header h3 {
+      margin: 0;
       font-size: 1.1em;
       color: #2c2c2c;
+      flex: 1;
+    }
+
+    .job-offer-status {
+      font-size: 0.75em;
+      padding: 4px 10px;
+      border-radius: 12px;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      white-space: nowrap;
+      flex-shrink: 0;
+    }
+
+    .job-offer-status-activa {
+      background: #d4edda;
+      color: #155724;
+      border: 1px solid #c3e6cb;
+    }
+
+    .job-offer-status-inactiva {
+      background: #f8d7da;
+      color: #721c24;
+      border: 1px solid #f5c6cb;
     }
 
     .job-offer-company {
@@ -522,6 +554,34 @@
       color: #444;
       font-size: 0.95em;
       line-height: 1.5;
+      margin: 8px 0;
+    }
+
+    .job-offer-contact {
+      margin: 8px 0;
+      padding: 10px;
+      background: #f8f9fa;
+      border-radius: 8px;
+      border-left: 3px solid #5fa890;
+      font-size: 0.9em;
+    }
+
+    .job-offer-contact-name {
+      display: block;
+      color: #2c2c2c;
+      font-weight: 600;
+      margin-bottom: 4px;
+    }
+
+    .job-offer-contact-email {
+      display: block;
+      color: #5fa890;
+      text-decoration: none;
+      word-break: break-all;
+    }
+
+    .job-offer-contact-email:hover {
+      text-decoration: underline;
     }
 
     .job-offer-meta {
@@ -537,6 +597,12 @@
       font-size: 0.85em;
       font-weight: 600;
       color: #3d7b66;
+    }
+
+    .job-offer-tag-salary {
+      background: linear-gradient(135deg, #fff3cd, #ffeaa7);
+      color: #856404;
+      border: 1px solid #ffc107;
     }
 
     .job-offer-link {
@@ -576,6 +642,16 @@
 
       .job-modal .modal-content {
         max-width: 95%;
+      }
+
+      .job-offer-header-top {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8px;
+      }
+
+      .job-offer-status {
+        align-self: flex-start;
       }
     }
 
