--- a/patron.html
+++ b/patron.html
@@ -776,6 +776,7 @@
             placeholder="12345678-9" 
             required
           />
+          <small style="display: block; margin-top: 5px; color: #b0b0b0; font-size: 0.9em;">Ingresar RUT sin puntos y con guión.</small>
         </div>
         <div class="form-group">
           <label for="userEscuela">Escuela: <span style="color: red;">*</span></label>
