Increase font sizes across patron.html, results.css, and styles.css for improved readability

--- a/patron.html
+++ b/patron.html
@@ -148,7 +148,7 @@
       padding: 12px 15px;
       border: 2px solid rgba(0, 212, 255, 0.3);
       border-radius: 8px;
-      font-size: 12px;
+      font-size: 14px;
       font-family: 'Times New Roman', Times, serif;
       transition: border-color 0.2s ease;
       /* Performance optimizations */
@@ -168,7 +168,7 @@
       border: none;
       padding: 12px 30px;
       border-radius: 8px;
-      font-size: 12px;
+      font-size: 20px;
       font-family: 'Times New Roman', Times, serif;
       font-weight: 600;
       cursor: pointer;
@@ -1324,7 +1324,7 @@
     // EmailJS Configuration
     // TODO: Replace these with your actual EmailJS credentials
     // Get them from https://www.emailjs.com/
-    const EMAILJS_SERVICE_ID = 'service_25dq11k'; // Replace with your EmailJS service ID
+    const EMAILJS_SERVICE_ID = 'service_rnwjyat'; // Replace with your EmailJS service ID
     const EMAILJS_TEMPLATE_ID = 'template_toa9xet'; // Replace with your EmailJS template ID
     const EMAILJS_PUBLIC_KEY = 'ESxmjvGP_bv4tcBkc'; // Replace with your EmailJS public key
 
